test/files/neg/i17266c.check
i17266c.scala:7: warning: eq not selected from this instance
  def f = eq("hello, world")
          ^
i17266c.scala:8: warning: synchronized not selected from this instance
  def g = synchronized { println("hello, world") }
          ^
i17266c.scala:12: warning: eq not selected from this instance
  def f = eq(s)
          ^
i17266c.scala:13: warning: synchronized not selected from this instance
  def g = synchronized { println(s) }
          ^
i17266c.scala:18: warning: eq not selected from this instance
  def f = eq(s)
          ^
i17266c.scala:19: warning: synchronized not selected from this instance
  def g = synchronized { println(s) }
          ^
i17266c.scala:7: warning: comparing values of types X.type and String using `eq` will always yield false
  def f = eq("hello, world")
            ^
i17266c.scala:12: warning: comparing values of types Predef.type and String using `eq` will always yield false
  def f = eq(s)
            ^
i17266c.scala:18: warning: comparing values of types p.package.type and String using `eq` will always yield false
  def f = eq(s)
            ^
i17266c.scala:22: warning: comparing values of types X.type and String using `eq` will always yield false
  def f = X.eq("hello, world")
              ^
i17266c.scala:27: warning: Z and String are unrelated: they will most likely never compare equal
  def f = eq("hello, world")
            ^
error: No warnings can be incurred under -Werror.
11 warnings
1 error
